# pgsqlasync2fast-fastapi

./: MANIFEST.in  README.md  pyproject.toml
docs/: .env.example
examples/: basic_usage.py  database_creation.py  fastapi_integration.py  multi_database.py
src/pgsqlasync2fast_fastapi/: __init__.py  connection.py  database.py  dependencies.py  settings.py
tests/: test_completo.py
